[package]
name = "rust-tracing"
version = "0.1.3"
edition = "2024"

[dependencies]
init4-from-env-derive =  "0.1.0"

# Tracing
tracing = "0.1.40"
tracing-core = "0.1.33"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json", "registry"] }

# OTLP
opentelemetry_sdk = "0.29.0"
opentelemetry = "0.29.0"
opentelemetry-otlp = "0.29.0"
opentelemetry-semantic-conventions = { version = "0.29.0", features = ["semconv_experimental"] }
tracing-opentelemetry = "0.30.0"
url = "2.5.4"

# Metrics
metrics = "0.24.1"
metrics-exporter-prometheus = "0.17.0"

# Other
thiserror = "2.0.11"
alloy = { version = "1.0.7", optional = true, default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
ajj = "0.3.1"
axum = "0.8.1"
serial_test = "3.2.0"
signal-hook = "0.3.17"
tokio = { version = "1.43.0", features = ["macros"] }

[features]
default = ["alloy"]
alloy = ["dep:alloy"]
perms = []
