[package]
name = "init4-from-env-derive"

description = "A derive macro for `init4_bin_base::FromEnv`"
version = "0.1.1"
edition = "2021"
rust-version = "1.81"
authors = ["init4", "James Prestwich"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/init4tech/bin-base"
repository = "https://github.com/init4tech/bin-base"

[dependencies]
heck = "0.5.0"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.100", features = ["full", "parsing"] }

[lib]
proc-macro = true

[dev-dependencies]
init4-bin-base = "0.3"
